2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaflowanalyzer.vala:

	Perform flow analysis on code in creation methods, fixes bug 566000

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valascanner.vala:
	* gobject/valaccodebasemodule.vala:

	Fix some type suffix issues with real literals

	* tests/basic-types/floats.test:

	Improve float tests

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am:
	* tests/basic-types/integers.test:

	Improve integer tests

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Fix error handling in try statements nested across method
	boundaries (using lambda expressions)

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala:

	Do not pass null as option to CCodeCompiler

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodcallmodule.vala:

	Fix critical in compiled applications using null-terminated arrays,
	fixes bug 567025

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodevariabledeclarator.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodecontrolflowmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaclassregisterfunction.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusmodule.vala:
	* gobject/valadbusservermodule.vala:
	* gobject/valagerrormodule.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagsignalmodule.vala:
	* gobject/valagtypemodule.vala:
	* gobject/valatyperegisterfunction.vala:

	Simplify CCodeVariableDeclarator construction with initializer

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/gsl.vapi:

	Fix gsl_error_set_error_handler binding

2009-01-08  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_selection_data_set_uris binding, fixes bug 566742

	* vapi/gtk+-2.0.vapi: regenerated

2009-01-08  Jürg Billeter  <j@bitron.ch>

	* vala/valadelegate.vala:
